Add necessary libraries (external to the demo).

--- a/static/index.html
+++ b/static/index.html
@@ -181,10 +181,10 @@
   </div>
 
 
-  <script src="../_/jquery-1.6.1.min.js"></script>
-  <script src="../_/jquery.address-1.4.min.js"></script>
-  <script src="../../lib/arbor.js"></script>
-  <script src="../_/graphics.js"></script>
+  <script src="js/jquery-1.6.1.min.js"></script>
+  <script src="js/jquery.address-1.4.min.js"></script>
+  <script src="js/arbor.js"></script>
+  <script src="js/graphics.js"></script>
 
   <!-- the halfviz source, broken out one ‘class’ per file -->
   <script src="src/dashboard.js"></script>
